if( ${CMAKE_BUILD_TYPE} STREQUAL Debug )
	set( SPRACHE_COMPILER_OPT_OPTIONS -O0 -g )
else()
	set( SPRACHE_COMPILER_OPT_OPTIONS -O2 )
endif()

file( GLOB EXAMPLES_SOURCES "*.u" )

foreach( EXAMPLE_SOURCE ${EXAMPLES_SOURCES} )
	file( RELATIVE_PATH EXAMPLE_SOURCE_REL ${CMAKE_CURRENT_SOURCE_DIR} ${EXAMPLE_SOURCE} )
	set( EXAMPLE_OBJECT ${CMAKE_CURRENT_BINARY_DIR}/${EXAMPLE_SOURCE_REL}.o )
	add_custom_command(
		OUTPUT ${EXAMPLE_OBJECT}
		DEPENDS ${EXAMPLE_SOURCE} Compiler${CURRENT_COMPILER_GENERATION}
		COMMAND Compiler${CURRENT_COMPILER_GENERATION} ${SPRACHE_COMPILER_OPT_OPTIONS} ${EXAMPLE_SOURCE} -o ${EXAMPLE_OBJECT} ${SPRACHE_COMPILER_PIC_OPTIONS} --verify-module --include-dir ${CMAKE_CURRENT_SOURCE_DIR}/../ustlib/
		)

	get_filename_component( EXAMPLE_SOURCE_BASE_NAME ${EXAMPLE_SOURCE_REL} NAME_WE )
	set( EXAMPLE_EXECUTABLE ${EXAMPLE_SOURCE_BASE_NAME}${CURRENT_COMPILER_GENERATION} )

	add_executable( ${EXAMPLE_EXECUTABLE} ../tests/dummy.cpp ${EXAMPLE_SOURCE} ${EXAMPLE_OBJECT} )
	add_dependencies( ${EXAMPLE_EXECUTABLE} Compiler${CURRENT_COMPILER_GENERATION} )


endforeach()
