add_subdirectory( cpp_header_converter_test )
add_subdirectory( cpp_linkage_test )
add_subdirectory( debug_info_test )
add_subdirectory( dep_file_test )
add_subdirectory( import_test )
add_subdirectory( include_dirs_test )
add_subdirectory( inline_linkage_test )
add_subdirectory( type_id_test )
add_subdirectory( unicode_file_names_test )
