# Build rule for "Ü" files
# Returns result in ${out_object}
function( CompileUSource u_source_file out_object )
	file( RELATIVE_PATH source_name_rel ${CMAKE_CURRENT_SOURCE_DIR} ${u_source_file} )
	set( object_name ${CMAKE_CURRENT_BINARY_DIR}/${source_name_rel}.o )
	add_custom_command(
		OUTPUT ${object_name}
		DEPENDS ${u_source_file} Compiler${CURRENT_COMPILER_GENERATION}
		COMMAND Compiler${CURRENT_COMPILER_GENERATION} ${u_source_file} -o ${object_name} ${SPRACHE_COMPILER_PIC_OPTIONS} --verify-module )
	set( ${out_object} ${object_name} PARENT_SCOPE )
endfunction()

# Returns list of objects in ${out_objects}
function( CompileUSources u_source_files out_objects )
	foreach( source ${u_source_files} )
		CompileUSource( ${source} out_object )
		list( APPEND out_objects_local ${out_object} )
	endforeach()
	set( ${out_objects} ${out_objects_local} PARENT_SCOPE )
endfunction()

add_subdirectory( async_calls_inlining_test )
add_subdirectory( bitcode_linking_test )
add_subdirectory( compiler_info_test )
add_subdirectory( compiler_exe_result_test )
add_subdirectory( cpp_header_converter_test )
add_subdirectory( cpp_linkage_test )
add_subdirectory( debug_info_test )
add_subdirectory( dep_file_test )
add_subdirectory( embed_test )
add_subdirectory( external_symbols_access_test )
add_subdirectory( generated_symbols_test )
add_subdirectory( import_test )
add_subdirectory( include_dirs_test )
add_subdirectory( inline_linkage_test )
add_subdirectory( macro_unique_identifiers_test )
add_subdirectory( nonnull_instructions_metadata_test )
add_subdirectory( prefixed_include_dirs_test )
add_subdirectory( shared_library_test )
add_subdirectory( type_id_test )
add_subdirectory( unicode_file_names_test )
add_subdirectory( unreachable_halt_test )
if( WIN32 )
	add_subdirectory( windows_system_call_test )
endif()
